fixed more spacing

--- a/css/index.css
+++ b/css/index.css
@@ -444,7 +444,7 @@ nav {
     transform: translateY(-110%) translateX(-103%); }
   #portfolio-item .project-jumbotron .project-image {
     position: absolute;
-    top: 35%;
+    top: 37%;
     left: 50%;
     -webkit-transform: translateY(-50%) translateX(-50%);
     -moz-transform: translateY(-50%) translateX(-50%);
@@ -456,7 +456,7 @@ nav {
 .otwm h1, .otwm h2, .otwm h3, .otwm h4, .otwm h5, .otwm h6 {
   text-align: center; }
 .otwm .dark-wrapper, .otwm .light-wrapper {
-  padding: 50px 0 25px 0; }
+  padding: 50px 0 15px 0; }
 .otwm .dark-wrapper {
   background: #f7f7f7;
   -webkit-box-shadow: inset 0 5px 7px -6px rgba(0, 0, 0, 0.2), inset 0 -5px 7px -6px rgba(0, 0, 0, 0.2);
@@ -494,15 +494,15 @@ nav {
     font-weight: 300;
     line-height: 1.75;
     text-align: center; }
-.otwm .shot-1 .old-logo img {
-  width: 80%; }
-.otwm .shot-1 .old-logo h5 {
-  font-size: 14px;
-  margin-top: 5px;
-  font-weight: normal;
-  color: rgba(0, 0, 0, 0.4); }
-.otwm .shot-1 #old-logo-text {
-  margin-top: 40px; }
+.otwm .shot-1 .old-logo {
+  margin-bottom: 30px; }
+  .otwm .shot-1 .old-logo img {
+    width: 80%; }
+  .otwm .shot-1 .old-logo h5 {
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: normal;
+    color: rgba(0, 0, 0, 0.4); }
 .otwm .shot-2 .other-brands {
   margin-bottom: 30px; }
   .otwm .shot-2 .other-brands img {
